--- a/src/assets/styles/css/marginUtilities.scss
+++ b/src/assets/styles/css/marginUtilities.scss
@@ -2,3 +2,13 @@
     margin-top: ($spacer * 10) !important;
     margin-bottom: ($spacer * 10) !important;
 }
+
+.my-7point5{
+    margin-top: ($spacer * 7.5) !important;
+    margin-bottom: ($spacer * 7.5) !important;
+}
+
+.my-5point5{
+    margin-top: ($spacer * 5.5) !important;
+    margin-bottom: ($spacer * 5.5) !important;
+}
