--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,7 @@
 @import "./custom.scss";
 @import "./assets/styles/css/marginUtilities.scss";
+@import "./assets/styles/css/widthUtilities.scss";
+@import "./assets/styles/css/formUtilities.scss";
 
 body{
   font-family: 'DM Sans', sans-serif;
@@ -55,36 +57,12 @@ svg path {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px var(--primary-color);
 }
 
-// .btn-primary:focus {
-//   background-color: var(--primary-color) !important;
-//   color: #ffffff;
-// }
-
-// .btn-primary:hover {
-//   background-color: var(--primary-color) !important;
-//   color: #ffffff;
-// }
-
-// .btn-primary:disabled {
-//   background-color: var(--primary-color) !important;
-//   color: #ffffff;
-// }
-
 .bordered-div {
   border: 2px solid var(--secondary-color);
   border-radius: 8px;
 }
 
-// /* BUTTONS */
-// .btn-primary,
-// .btn-primary:hover {
-//   height: 48px;
-//   background-color: var(--primary-color);
-//   color: #ffffff;
-//   font-weight: 300;
-//   font-size: 16px;
-//   border-color: var(--primary-color);
-// }
+
 /* BUTTONS */
 /* LABELS */
 label {
